infra/aws/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: inferno-ingress
  namespace: ${namespace}
  annotations:
    kubernetes.io/ingress.class: nginx
    acme.cert-manager.io/http01-edit-in-place: 'true'
    cert-manager.io/cluster-issuer: letsencrypt-prod
    # nginx.ingress.kubernetes.io/rewrite-target: /$2 # infernos javascript does not work with base relative urls
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - inferno.hl7.org.au
      secretName: inferno-tls
  rules:
  - host: inferno.hl7.org.au
    http:
      paths:
      - path: /validator(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: inferno-fhir-validator
            port:
              number: 80
      - path: /validatorapi(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: inferno-validator
            port:
              number: 4567
      - path: /
        pathType: Prefix
        backend:
          service:
            name: inferno
            port:
              number: 4567
